--- a/templates/learn_more_language_cafe.html
+++ b/templates/learn_more_language_cafe.html
@@ -33,6 +33,11 @@
                 <li><a href="{{ url_for('contact') }}">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="language-switcher">
+            <a href="#" class="active">EN</a>
+            <span class="divider">|</span>
+            <a href="#">NL</a>
+        </div>
     </header>
     <main>
         <!-- Top Banner -->
