--- a/templates/communities.html
+++ b/templates/communities.html
@@ -38,6 +38,11 @@
                 <li><a href="{{ url_for('contact') }}">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="language-switcher">
+            <a href="#" class="active">EN</a>
+            <span class="divider">|</span>
+            <a href="#">NL</a>
+        </div>
     </header>
 
     <!-- Breadcrumb Navigation -->
