--- a/templates/learn_more_blooming.html
+++ b/templates/learn_more_blooming.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <!-- Top Banner -->
-        <div style="width: 100%; min-height: 260px; background: url('{{ url_for('static', filename='images/blommers_picture.png') }}') center center/cover no-repeat; display: flex; flex-direction: column; justify-content: center; align-items: center; position: relative;">
+        <div style="width: 100%; min-height: 260px; background: url('{{ url_for('static', filename='images/homepage_main_1.jpg') }}') center center/cover no-repeat; display: flex; flex-direction: column; justify-content: center; align-items: center; position: relative;">
             <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.65); z-index: 1;"></div>
             <div style="background: rgba(255,255,255,0.0); width: 100%; padding: 48px 0 32px 0; text-align: center; position: relative; z-index: 2;">
                 <h1 style="font-size: 2rem; font-weight: 700; color: #29184A; margin-bottom: 12px;">Bloom Classes & Do-Sessions</h1>
