add_link_to button

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -114,7 +114,7 @@
                 <div class="activity-card">
                     <div class="activity-title">Informal language class <span class="activity-date" style="color:#F2994A;">| Every Tuesday</span></div>
                     <div class="activity-desc">Improve Dutch & meet new friends in a relaxed setting. Sometimes we go canoeing!</div>
-                    <a href="#" class="activity-link">Sign up &rarr;</a>
+                    <a href="{{ url_for('learn_more_language_cafe') }}" class="activity-link">Sign up &rarr;</a>
                 </div>
                 <div class="activity-card">
                     <div class="activity-title">Connect for Impact <span class="activity-date" style="color:#F2994A;">| June 3</span></div>
